--- a/ImagePixel/ImagePixel.csproj
+++ b/ImagePixel/ImagePixel.csproj
@@ -48,16 +48,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Pixel.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="img_form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="img_form.Designer.cs">
+      <DependentUpon>img_form.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="img_form.resx">
+      <DependentUpon>img_form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -83,13 +83,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Upload to the Cloud.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Upload to Cloud.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\upload.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\File Download.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\File DownloadPng.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
